descrições no readme

--- a/site-de-musica.html
+++ b/site-de-musica.html
@@ -52,7 +52,7 @@
             <p class="lead"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Transmita mais de 45 milhões de músicas, sem anúncios. </font><font style="vertical-align: inherit;">Ou baixe álbuns e faixas para ouvir offline. </font><font style="vertical-align: inherit;">Todas as músicas da sua biblioteca pessoal do myTunes - não importa de onde vieram - ficam ao lado do catálogo da Orange Music. </font><font style="vertical-align: inherit;">Comece seu teste gratuito de três meses sem compromisso e cancele a qualquer momento.</font></font></p>
             <a href="#" class="btn btn-primary mb"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Comece seu teste agora</font></font></a>
             <p class="text-light"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Orange Music está disponível no myTunes e para dispositivos iOS e Android.</font></font></p>
-            <img src="img/mockup1.png" alt="">
+            <img src="ppp.png" alt="">
         </div>
     </section>
 
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="gift-cards">
                 <div>
-                    <img src="img/cards.png" alt="">
+                    <img src="cards.png" alt="">
                 </div>
                 <div>
                     <h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Cartões de presente</font></font></h2>
